# Reconocimiento_de_Patrones_Proyecto

./: README.md  pyproject.toml  setup.txt
notebooks/: Student_Stress.ipynb  WESAD.ipynb  student_stress_normalizado.csv
notebooks/WESAD_PROCESADO/S10/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S11/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S13/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S14/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S15/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S16/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S17/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S2/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S3/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S4/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S5/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S6/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S7/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
notebooks/WESAD_PROCESADO/S8/: EDA_NORMALIZADA.csv  HR_NORMALIZADA.csv  TEMP_NORMALIZADA.csv
(+3 files in other folders)
